frontend/front-deploy.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sreenathkk96/frontend_employee_table:latest
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
      restartPolicy: Always










#https://loom.com/share/7a98d563a64144f685f9fe25a7628917 k8s frontend page working
# https://loom.com/share/ae6c3bf1dffa4d6e951735da7c6fb748


















# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   creationTimestamp: null
#   labels:
#     app: frontend
#   name: frontend
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: frontend
#   strategy: {}
#   template:
#     metadata:
#       creationTimestamp: null
#       labels:
#         app: frontend
#     spec:
#       containers:
#       - image: 1234567890/todolist:frontend-v13
#         name: react-todolist
#         env:
#           - name: REACT_APP_HOST
#             value: "backend-service"
#           - name: REACT_APP_PORT
#             value: "8000"
#         ports:
#           - containerPort: 3000
#         volumeMounts:
#           - mountPath: /var/log/
#             name: frontend
#         command: ["/bin/sh", "-c"]
#         args:
#           - npm start;
#       volumes:
#         - name: frontend
#           hostPath:
#             path: /var/log/
