frontend/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
        app: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      name: http
  type: ClusterIP
